package um.tesoreria.core.hexagonal.chequera.tipoChequera.domain.ports.in;

public interface DeleteTipoChequeraUseCase {
    void deleteTipoChequera(Integer tipoChequeraId);
}
