package um.tesoreria.core.hexagonal.chequera.tipoChequera.domain.ports.in;

public interface UnmarkTipoChequeraUseCase {
    void unmarkTipoChequera();
}
