---
title: Arquitectura Hexagonal - Módulo TipoChequera (v3.49.0)
---

classDiagram
    direction TB

    namespace domain {
        class TipoChequera {
            +Integer tipoChequeraId
            +String nombre
            +String prefijo
            +Integer geograficaId
            +Integer claseChequeraId
            +Byte imprimir
            +Byte contado
            +Byte multiple
            +String emailCopia
            +Geografica geografica
            +ClaseChequera claseChequera
            +jsonify() String
        }

        class TipoChequeraRepository {
            << interface >>
            +findAll() List~TipoChequera~
            +findAllAsignable(Integer, Integer, Integer, Integer) List~TipoChequera~
            +findAllByFacultadIdAndGeograficaId(Integer, Integer) List~TipoChequera~
            +findAllByClaseChequeraId(Integer) List~TipoChequera~
            +findAllByClaseChequeraIds(List~Integer~) List~TipoChequera~
            +findAllByStrings(List~String~) List~TipoChequeraSearch~
            +findAllByStringsAndGeograficaId(List~String~, Integer) List~TipoChequeraSearch~
            +findById(Integer) Optional~TipoChequera~
            +findLast() Optional~TipoChequera~
            +create(TipoChequera) TipoChequera
            +update(TipoChequera) TipoChequera
            +deleteById(Integer)
            +unmark()
            +mark(Integer, Byte) TipoChequera
        }

        class SearchTipoChequeraUseCase {
            << interface >>
            +searchTipoChequeras(List~String~) List~TipoChequeraSearch~
            +searchTipoChequerasByGeograficaId(List~String~, Integer) List~TipoChequeraSearch~
        }

        class TipoChequeraSearch {
            +Integer tipoChequeraId
            +String nombre
            +String prefijo
            +Integer geograficaId
            +Integer claseChequeraId
        }
    }

    namespace application {
        class TipoChequeraService {
            +findAll() List~TipoChequera~
            +findAllAsignable(Integer, Integer, Integer, Integer) List~TipoChequera~
            +findAllByFacultadIdAndGeograficaId(Integer, Integer) List~TipoChequera~
            +findAllByClaseChequera(Integer) List~TipoChequera~
            +findAllByClaseChequeraIds(List~Integer~) List~TipoChequera~
            +findByTipoChequeraId(Integer) TipoChequera
            +findLast() TipoChequera
            +add(TipoChequera) TipoChequera
            +update(TipoChequera, Integer) TipoChequera
            +delete(Integer)
            +unmark()
            +mark(Integer, Byte) TipoChequera
            +findAllByStrings(List~String~) List~TipoChequeraSearch~
            +findAllByStringsAndGeograficaId(List~String~, Integer) List~TipoChequeraSearch~
        }

    }
    namespace application_usecases {
            class GetAllTipoChequeraUseCaseImpl
            class GetAllTipoChequeraAsignableUseCaseImpl
            class GetAllTipoChequeraByFacultadAndGeograficaUseCaseImpl
            class GetAllTipoChequeraByClaseChequeraUseCaseImpl
            class GetTipoChequeraByIdUseCaseImpl
            class GetLastTipoChequeraUseCaseImpl
            class CreateTipoChequeraUseCaseImpl
            class UpdateTipoChequeraUseCaseImpl
            class DeleteTipoChequeraUseCaseImpl
            class MarkTipoChequeraUseCaseImpl
            class UnmarkTipoChequeraUseCaseImpl
            class SearchTipoChequeraUseCaseImpl
    }
    namespace application {

        class TipoChequeraException
    }

    namespace infrastructure_persistence {
            class TipoChequeraEntity {
                +Integer tipoChequeraId
                +String nombre
                +String prefijo
                +Integer geograficaId
                +Integer claseChequeraId
                +Byte imprimir
                +Byte contado
                +Byte multiple
                +String emailCopia
                +GeograficaEntity geografica
                +ClaseChequeraEntity claseChequera
            }

            class JpaTipoChequeraRepository {
                << JpaRepository >>
                +findAllByTipoChequeraIdInAndGeograficaId(List~Integer~, Integer) List~TipoChequeraEntity~
                +findAllByClaseChequeraId(Integer) List~TipoChequeraEntity~
                +findAllByClaseChequeraIdIn(List~Integer~) List~TipoChequeraEntity~
                +findTopByOrderByTipoChequeraIdDesc() Optional~TipoChequeraEntity~
                +findByTipoChequeraId(Integer) Optional~TipoChequeraEntity~
            }

            class JpaTipoChequeraRepositoryAdapter {
                -JpaTipoChequeraRepository repository
                -LectivoTotalService lectivoTotalService
                -TipoChequeraMapper mapper
            }

            class TipoChequeraMapper {
                +toDomainModel(TipoChequeraEntity) TipoChequera
                +toEntity(TipoChequera) TipoChequeraEntity
                +toSearchDomain(TipoChequeraSearch) TipoChequeraSearch
            }

            class TipoChequeraSearchRepository {
                << interface >>
                +findAllByStrings(List~String~) List~TipoChequeraSearch~
                +findAllByStringsAndGeograficaId(List~String~, Integer) List~TipoChequeraSearch~
            }
    }
    namespace infrastructure_web {
            class TipoChequeraController {
                -TipoChequeraService service
                -TipoChequeraDtoMapper dtoMapper
                +findAll() ResponseEntity~List~TipoChequeraResponse~~
                +findByTipoChequeraId(Integer) ResponseEntity~TipoChequeraResponse~
                +add(TipoChequeraRequest) ResponseEntity~TipoChequeraResponse~
                +update(TipoChequeraRequest, Integer) ResponseEntity~TipoChequeraResponse~
                +delete(Integer) ResponseEntity~Void~
                +findAllAsignable(Integer, Integer, Integer, Integer) ResponseEntity~List~TipoChequeraResponse~~
                +mark(Integer, Byte) ResponseEntity~Void~
                +unmark() ResponseEntity~Void~
                +findAllByStrings(List~String~) ResponseEntity~List~TipoChequeraSearchResponse~~
                +findAllByStringsAndGeograficaId(List~String~, Integer) ResponseEntity~List~TipoChequeraSearchResponse~~
            }

            class TipoChequeraRequest {
                +Integer tipoChequeraId
                +String nombre
                +String prefijo
                +Integer geograficaId
                +Integer claseChequeraId
                +Byte imprimir
                +Byte contado
                +Byte multiple
                +String emailCopia
            }

            class TipoChequeraResponse {
                +Integer tipoChequeraId
                +String nombre
                +String prefijo
                +Integer geograficaId
                +Integer claseChequeraId
                +Byte imprimir
                +Byte contado
                +Byte multiple
                +String emailCopia
                +GeograficaResponse geografica
                +ClaseChequeraResponse claseChequera
            }

            class TipoChequeraDtoMapper {
                +toDomain(TipoChequeraRequest) TipoChequera
                +toResponse(TipoChequera) TipoChequeraResponse
                +toSearchResponse(TipoChequeraSearch) TipoChequeraSearchResponse
            }

            class TipoChequeraSearchResponse {
                +Integer tipoChequeraId
                +String nombre
                +String prefijo
                +Integer geograficaId
                +Integer claseChequeraId
            }
    }

    TipoChequeraService --> GetAllTipoChequeraUseCase : uses
    TipoChequeraService --> GetAllTipoChequeraAsignableUseCase : uses
    TipoChequeraService --> GetAllTipoChequeraByFacultadAndGeograficaUseCase : uses
    TipoChequeraService --> GetAllTipoChequeraByClaseChequeraUseCase : uses
    TipoChequeraService --> GetTipoChequeraByIdUseCase : uses
    TipoChequeraService --> GetLastTipoChequeraUseCase : uses
    TipoChequeraService --> CreateTipoChequeraUseCase : uses
    TipoChequeraService --> UpdateTipoChequeraUseCase : uses
    TipoChequeraService --> DeleteTipoChequeraUseCase : uses
    TipoChequeraService --> MarkTipoChequeraUseCase : uses
    TipoChequeraService --> UnmarkTipoChequeraUseCase : uses
    TipoChequeraService --> SearchTipoChequeraUseCase : uses

    GetAllTipoChequeraUseCaseImpl ..|> GetAllTipoChequeraUseCase : implements
    GetAllTipoChequeraAsignableUseCaseImpl ..|> GetAllTipoChequeraAsignableUseCase : implements
    GetAllTipoChequeraByFacultadAndGeograficaUseCaseImpl ..|> GetAllTipoChequeraByFacultadAndGeograficaUseCase : implements
    GetAllTipoChequeraByClaseChequeraUseCaseImpl ..|> GetAllTipoChequeraByClaseChequeraUseCase : implements
    GetTipoChequeraByIdUseCaseImpl ..|> GetTipoChequeraByIdUseCase : implements
    GetLastTipoChequeraUseCaseImpl ..|> GetLastTipoChequeraUseCase : implements
    CreateTipoChequeraUseCaseImpl ..|> CreateTipoChequeraUseCase : implements
    UpdateTipoChequeraUseCaseImpl ..|> UpdateTipoChequeraUseCase : implements
    DeleteTipoChequeraUseCaseImpl ..|> DeleteTipoChequeraUseCase : implements
    MarkTipoChequeraUseCaseImpl ..|> MarkTipoChequeraUseCase : implements
    UnmarkTipoChequeraUseCaseImpl ..|> UnmarkTipoChequeraUseCase : implements
    SearchTipoChequeraUseCaseImpl ..|> SearchTipoChequeraUseCase : implements

    GetAllTipoChequeraUseCaseImpl --> TipoChequeraRepository : uses
    GetAllTipoChequeraAsignableUseCaseImpl --> TipoChequeraRepository : uses
    GetAllTipoChequeraByFacultadAndGeograficaUseCaseImpl --> TipoChequeraRepository : uses
    GetAllTipoChequeraByClaseChequeraUseCaseImpl --> TipoChequeraRepository : uses
    GetTipoChequeraByIdUseCaseImpl --> TipoChequeraRepository : uses
    GetLastTipoChequeraUseCaseImpl --> TipoChequeraRepository : uses
    CreateTipoChequeraUseCaseImpl --> TipoChequeraRepository : uses
    UpdateTipoChequeraUseCaseImpl --> TipoChequeraRepository : uses
    DeleteTipoChequeraUseCaseImpl --> TipoChequeraRepository : uses
    MarkTipoChequeraUseCaseImpl --> TipoChequeraRepository : uses
    UnmarkTipoChequeraUseCaseImpl --> TipoChequeraRepository : uses
    SearchTipoChequeraUseCaseImpl --> TipoChequeraRepository : uses

    JpaTipoChequeraRepositoryAdapter ..|> TipoChequeraRepository : implements
    JpaTipoChequeraRepositoryAdapter --> JpaTipoChequeraRepository : uses
    JpaTipoChequeraRepositoryAdapter --> TipoChequeraMapper : uses
    JpaTipoChequeraRepositoryAdapter --> TipoChequeraSearchRepository : uses

    TipoChequeraMapper --> TipoChequera : maps
    TipoChequeraMapper --> TipoChequeraEntity : maps
    JpaTipoChequeraRepository --> TipoChequeraEntity : persists

    TipoChequeraController --> TipoChequeraService : calls
    TipoChequeraController --> TipoChequeraDtoMapper : uses
    TipoChequeraDtoMapper --> TipoChequera : maps
    TipoChequeraDtoMapper --> TipoChequeraResponse : maps
